# myprojectsinpython

./: README.md  appspec.yml  ocioDescargarYoutube.py  run.sh  setup.sh
.github/workflows/: main.yml
MUSICA/: ocioDescargarYoutube.py
MyApacheHttpServer/: Dockerfile
MyApacheHttpServer/website/: prueba.html
MyDockerTracing/: main.py
MyDockerTracking/: main.py
PilotosEjemplosAWS/: entorno.yml
PilotosEjemplosAWS/ansible/: configurar_servidor.yaml
PilotosEjemplosAWS/ansible/hosts/: inventory.yaml
PilotosEjemplosAWS/src/codedeploy/: instrucciones.txt
PilotosEjemplosAWS/src/ec2/: instrucciones.txt
PilotosEjemplosAWS/src/iam/: configurar_profile_token.py
PilotosEjemplosAWS/src/s3/: operacionesS3.py
PysparkPruebas/: README.md  conftest.py  entorno.yml  pyproject.toml  pytest.ini
PysparkPruebas/docs/source/: conf.py  index.rst
PysparkPruebas/src/: pysparkPrueba001.py  pysparkPrueba002.py  pysparkPrueba003.py  pysparkPrueba004.py  pysparkPrueba005.py  pysparkPrueba006.py
PysparkPruebas/test/: conftest.py  test_pysparkPrueba002.py
PysparkPruebas/tests/: test_pysparkPrueba002.py
PysparkPruebas/tests/recursos/: fichero002.csv  prueba.txt
PythonBasicoChuleta/: hello.py  operacionesHabituales.py  operacionesML.py  operacionesPandas.py  testUnitarios.py
PythonBasicoChuleta/test/: testUnitarios_test.py
YoutubeUtils/: entorno.yml  ocioDescargarYoutube.py
misChuletas/: operacionesHabituales.py  pysparkPruebas.py
misChuletas/test/: testUnitarios_test.py
servidoresweb_simples/: servidor_web_hola_mundo.py
(+1 files in other folders)
