[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PysparkPruebasPackage"
version = "0.0.1"
authors = [
  { name="C.A.G.", email="c.a.g@example.com" },
]
description = "Proyecto de pruebas que usa libreria PySpark"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
